# temporaldata

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml  testing.yml
data/: __init__.py  concat.py
docs/: README.md
docs/source/: conf.py  index.rst  package.rst
docs/source/concepts/: advanced_interval_operations.rst  creating_objects.rst  data_manipulation.rst  getting_started.rst  installation.rst  interval_operations.rst  io.rst  lazy_loading.rst  split.rst
kirby/data/: data.py
temporaldata/: __init__.py  concat.py  temporaldata.py
tests/: test_add_split_mask.py  test_coalesce.py  test_concat.py  test_data.py  test_data_auto_domain.py  test_h5_io.py  test_interval.py  test_materialize.py  test_serialize.py
